nog iets meer dan

--- a/homepage.html
+++ b/homepage.html
@@ -110,6 +110,15 @@
         <div class="reveal">
             <div class="width">
                 <h2 class="guide">REFLECTION & EVALUATION</h2>
+                <p class="desc">Reflecting on the entirity of the semester, the most prominent things I learned were:
+                    <ul class="target-list">
+                        <li>Working with SCRUM in a team manner. Before I have only worked with SCRUM individually, and working in a group together really opened up all of the possibilities of SCRUM.</li>
+                        <li>Working professionally with Figma in a team manner. I am glad that during my internship, I have received the chance to gain more knowledge about Figma. During my internship I was working alone, but things I learned such as auto-layout, components and styles could be applied in the group project of this semester in order to deliver a solid end product. I was glad that I was also able to share this knowledge with group members, and learn myself simultaneously.</li>
+                    </ul>
+                </p>
+                <p class="desc">If you want to read more about my reflection and evaluation, you can read <a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">this</a> and <a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">this</a> deliverable. There are however a few things I would have done differently if I could start from the beginning of the semester. This would be to constantly update my portfolio when something new is done. This mainly to keep the quality of product throughout the semester at the same level.</p>
+                <p class="desc">I would also have liked to spend more time on distancing from a mobile app for the group project. Right now, the end product would have been a mobile application from the start, and me and the group stuck to this. I would have liked to experiment more, which is something that was suggested by lecturers, but me and the group still wanted to take the safe route. Hence why I was looking for a more experimental graduation internship, for which I am glad that I have found one. During this internship I am taking the advice from lecturers that I received during this semester, and keep building and delivering products to stakeholders, even if they fail.</p>
+                <p class="desc">Overall I have thoroughly enjoyed the semester, which is mainly because of the solid team work that was delivered during the group project, and my semestercoach who was always available when I was in need of guidance.</p>
                 <hr>
             </div>
         </div>
@@ -226,7 +235,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable11.html" target="_blank" rel="noopener noreferrer">Group Project: Advice Report</a></li>
                                 <li><a class="menu-link line" href="internationaldeliverable1.html" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="internationaldeliverable2.html" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
                     </tr>
