--- a/international.html
+++ b/international.html
@@ -110,7 +110,7 @@
         <div class="width">
             <h2 class="guide">RESULTS</h2>
             <p class="desc">
-              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
+              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Some deliverables have a link at the bottom of the page, which
               reference towards its connected research document.
             </p>
             <hr>
