--- a/personal.html
+++ b/personal.html
@@ -87,6 +87,7 @@
                 <li>How do create a modernized website for my mothers company with the help of a front-end framework?</li>
               </ul>
             </p>
+            <p class="desc">Before I started working on designing the website, I wanted to get a clear visualisation on what the structure of the website would look like. For this I used a UML use case diagram.</p>
             <hr>
         </div>
     </div>
@@ -94,7 +95,11 @@
         <div class="width">
             <h2 class="guide">REFLECTION & EVALUATION</h2>
             <p class="desc">
-              The personal project is still a work-in-progress, but 
+              The personal project is still a work-in-progress, and I will start working on the design during my graduation semester, but there are already a few things that I learned.
+              <ul class="target-list">
+                <li>How to create a UML use case diagram to visualise the architecture structure of a website.</li>
+                <li>The use of gsap to animate JavaScript components.</li>
+              </ul> 
             </p>
             <hr>
         </div>
@@ -103,8 +108,7 @@
         <div class="width">
             <h2 class="guide">RESULTS</h2>
             <p class="desc">
-              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
-              reference towards its connected research document.
+              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them.
             </p>
             <hr>
         </div>
