competence table angepast

--- a/homepage.html
+++ b/homepage.html
@@ -155,7 +155,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -193,7 +193,6 @@
                                 <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable1.html" target="_blank" rel="noopener noreferrer">Personal Project: Requirements Personal Website</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -204,6 +203,10 @@
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable8.html" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                             </ul>
