--- a/groupdeliverable2.html
+++ b/groupdeliverable2.html
@@ -112,6 +112,7 @@
         <p class="desc">
           This research document mainly focuses on the moderated user testing I have performed with several group members and its results, while the unmoderated user testing has been taken care of by other group members. The way of conducting moderated user testing is done individually between the researcher(s) and the participant.
         </p>
+        <p class="desc">In the research document itself, the entire planning for the usability test, inclduing tasks that are given to the users are thoroughly worked out.</p>
         <hr class="version">
       </div>
     </div>
