--- a/homepage.html
+++ b/homepage.html
@@ -166,7 +166,7 @@
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable8.html" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
-                                <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Testing Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                             </ul>
@@ -207,7 +207,7 @@
                                 <li><a class="menu-link line" href="individualdeliverable8.html" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable3.html" target="_blank" rel="noopener noreferrer">Group Project: Testing Methods Research</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                             </ul>
                         </td>
@@ -238,6 +238,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable11.html" target="_blank" rel="noopener noreferrer">Group Project: Advice Report</a></li>
                                 <li><a class="menu-link line" href="internationaldeliverable1.html" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="internationaldeliverable2.html" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
+                                <li><a class="menu-link line" href="internationaldeliverable3.html" target="_blank" rel="noopener noreferrer">International Project: Out Of Space Week</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
