--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -121,6 +121,13 @@
     <hr class="version">
   </div>
   <div class="reveal">
+    <div class="width">
+      <h2 class="guide">REFERENCES</h2>
+      <p class="desc">Rohrer, C. (2024c, januari 12). When to use Which User-Experience research methods. Nielsen Norman Group. https://www.nngroup.com/articles/which-ux-research-methods/</p>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
     <div class="company-btn">
       <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
     </div>
