--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -80,7 +80,7 @@
         The start of the actual design was a bit rough. Making design choices such as colors, typefaces and spacing took longer than expected, which was not particularly a bad thing, but I wish I could have went through this in a more fluent succession. On the other hand, since it took longer for me to make certain choices, I dedicated more time to asking for feedback on certain aspects of the portfolio. This helped with creating a portfolio design I was sufficed with.
       </p>
       <p class="desc">
-        I also wanted my design to be in a sleek dark mode. This is a decision I had made since this is how I usually create my sites. All projects would eventually have a clear illustration, indicating the project it refers to (the group project will have the grip on sound logo for example).
+        I also wanted my design to be in a sleek dark mode. This is a decision I had made since this is how I usually create my sites. Dark mode is also useful for reducing eye strain in low-light conditions and conserving battery power (Pryshlyak, 2023). All projects would eventually have a clear illustration, indicating the project it refers to (the group project will have the grip on sound logo for example).
       </p>
       <p class="desc">
         Below you can see the design which has been created based on the earlier created wireframes.
@@ -128,6 +128,13 @@
         <li>Validate the created prototype with the user research plan.</li>
         <li>Iterate on the portfolio if needed before jumping in development.</li>
       </ul>
+      <hr class="version">
+    </div>
+  </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">REFERENCES</h2>
+      <p class="desc">Pryshlyak, M. (2023, 20 oktober). Dark Mode vs. Light Mode: The Great Debate. SaaSJet. https://saasjet.com/blog/dark-mode-vs-light-mode/#:~:text=The%20dark%20mode%20is%20ideal,particularly%20for%20late%2Dnight%20workers.</p>
       <hr class="version">
     </div>
   </div>
