--- a/individualdeliverable7.html
+++ b/individualdeliverable7.html
@@ -41,9 +41,23 @@
     </div>
     <div class="reveal">
       <div class="width">
+        <h2 class="guide">C4 MODEL</h2>
+        <p class="desc">Before starting with the development of my portfolio, I wanted to create a schematic overview of the architecture. I tried out creating a C4 model, which can be seen below:</p>
+        <div class="company">
+          <img src="./images/C4layer1.png" class="deliverable">
+        </div>
+        <div class="company">
+          <img src="./images/C4layer2.png" class="deliverable">
+        </div>
+        <p class="desc">However, this C4 model was not complete and was not really my cup of tea, and I left it for what it was. In <a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">UML Use Case Diagram Personal Website</a> I tried out a different visualisation.</p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
         <h2 class="guide">START: HOMEPAGE</h2>
         <p class="desc">
-          For the homepage, I wanted to achieve a look that invites the user to find out more about the portfolio. This would entail the logo and proof button at the top of the screen, and inviting content in the middle of the screen. 
+          For the homepage, I wanted to achieve a look that invites the user to find out more about the portfolio. This initially entailed the logo at the top of the screen, and inviting content in the middle of the screen. However, in <a class="menu-link line" href="individualdeliverable8.html" target="_blank" rel="noopener noreferrer">portfolio iterations</a> you can see the changes that have been made to the initial design.
         </p>
         <p class="desc">I re-used a lot of code from my already existing portfolio from my <a class="menu-link line" href="https://tijnvdh.nl/Portfolio/opdracht.html" target="_blank" rel="noopener noreferrer">internship</a>. While a lot of functionalities act the same, I did try to apply a different type of style to this portfolio, while still keeping the dark theme.</p>
         <div class="company">
