--- a/homepage.html
+++ b/homepage.html
@@ -155,7 +155,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable1.html" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable2.html" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -181,7 +181,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable4.html" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable5.html" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable3.html" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -224,7 +224,7 @@
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable3.html" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
                                 <li><a class="menu-link line" href="personaldeliverable4.html" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
-                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram Personal Website</a></li>
+                                <li><a class="menu-link line" href="personaldeliverable2.html" target="_blank" rel="noopener noreferrer">Personal Project: UML Use Case Diagram</a></li>
                             </ul>
                         </td>
                     </tr>
