--- a/personal.html
+++ b/personal.html
@@ -122,7 +122,7 @@
               <img src="./images/umlusecase2.png">
               <div class="main-row">
                 <div class="row-text">
-                  <h2>UML Use Case Diagram Personal Website</h2>
+                  <h2>UML Use Case Diagram</h2>
                 </div>
                 <div class="learningoutcome">
                   <h3>LO-1</h3>
