--- a/personaldeliverable2.html
+++ b/personaldeliverable2.html
@@ -17,7 +17,7 @@
   <section id="welcome"></section>
   <nav class="navbar">
     <div class="logo">
-      <a href="individual.html"><img src="./images/icons8-return-96.png"></a>
+      <a href="personal.html"><img src="./images/icons8-return-96.png"></a>
     </div>
     <div class="toggle-button" href="#" id="menu">
       <span class="bar1"></span>
